--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -58,7 +58,7 @@
               </div>
             </div>
             <div class="form-check">
-              <button type="submit" class="btn btn-login float-right" (click)="onSubmit()">Submit</button>
+              <button type="submit" class="btn btn-login float-right" [disabled]="!registerForm.valid" (click)="onSubmit()">Submit</button>
             </div>
           </div>
         </form>
