--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,10 +18,11 @@
               <input type="checkbox" class="form-check-input">
               <small>Remember Me</small>
             </label>-->
+            <button routerLink="/register" routerLinkActive="active" type="submit" class="btn btn-login float-left"> No Account</button>
             <button (click)="loginBtn()" type="submit" class="btn btn-login float-right">Submit</button>
           </div>
         </form>
-        <div class="copy-text">Created with <i class="fa fa-heart"></i> by Amen allah, Haythem and Seif</div>
+        <div class="copy-text">Created  by Amen allah, Haythem and Seif</div>
       </div>
       <div class="col-md-8 banner-sec">
         <app-slider></app-slider>
