--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,5 +1,7 @@
 <section class="list-block py-0 py-sm-5">
   <div class="container p-sm-5">
+      <button routerLink="/profileC" routerLinkActive="active"  class="btn btn-outline-light float-left d-none d-sm-block" style="color: #0f867fdb; font-weight: bold;
+      border-color: #0f867fdb; font-size: 18px">My Profile</button>
     <button (click)="logOut()" class="btn btn-outline-light float-right d-none d-sm-block" style="color: #0f867fdb; font-weight: bold;
       border-color: #0f867fdb; font-size: 18px">Logout</button>
     <h3 class="text-center">Consultants LIST</h3>
